--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -4,54 +4,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Data</title>
+    <title>Edit Data</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 
 <body>
-    <div class="container" style="margin-top: 30px">
-        <h3 style="text-align: left;">ADD YOUR DATA</h3>
-        <form action="" method="post" style="margin-top: 20px;">
+    <form action="" method="post">
+        <div class="container" style="margin-top: 30px">
+            <h3 style="text-align: left;">EDIT YOUR DATA</h3>
             <div class="form-group row">
                 <label for="string" name="string" class="col-sm-1 col-form-label">String</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" name="stringdata" id="string" placeholder="masukan string">
+                    <input type="text" class="form-control" name="stringdata" id="string" value=<%= row.stringdata%> >
                 </div>
             </div>
-
             <div class="form-group row">
                 <label for="number" class="col-sm-1 col-form-label">Number</label>
                 <div class="col-sm-10">
-                    <input type="number" class="form-control" id="number" name="integerdata" placeholder="masukan integer">
+                    <input type="number" class="form-control" id="number" name="integerdata" value=<%= row.integerdata %> >
                 </div>
             </div>
             <div class="form-group row">
                 <label for="float" class="col-sm-1 col-form-label">Float</label>
                 <div class="col-sm-10">
-                    <input type="number" class="form-control" step="0.01" id="float" name="floatdata"
-                        placeholder="masukan float">
+                    <input type="number" class="form-control" step="0.1" id="float" name="floatdata"
+                        value="<%= row.floatdata%>">
                 </div>
             </div>
             <div class="form-group row">
-                <label for="date" class="col-sm-1 col-form-label">Date</label>
+                <label for="datedata" class="col-sm-1 col-form-label">Date</label>
                 <div class="col-sm-10">
-                    <input type="date" class="form-control" name="datedata" id="date" placeholder="masukan date">
+                    <input type="date" class="form-control" name="datedata" id="datedata" value=<%= row.newDate %>>
                 </div>
             </div>
             <div class="form-group row">
                 <label for="boolean" class="col-sm-1 col-form-label">Boolean</label>
                 <div class="col-sm-10">
-                    <select name="boolean" id="boolean" class="form-control">
-                        <option selected disabled> choose the boolean</option>
+                    <select name="booleandata" id="boolean" class="form-control">
+                        <% if(row.booleandata == true) {%>
+
                         <option name="booleandata" class="form-control" value="true">True</option>
                         <option name="booleandata" class="form-control" value="false">False</option>
+                        <%} else {%>
+                        <option name="booleandata" class="form-control" value="false">False</option>
+                        <option name="booleandata" class="form-control" value="true">True</option>
+                        <% }%>
                     </select>
                 </div>
             </div>
             <button type="submit" class="btn btn-primary">Save</button>
             <a href="/">Back</a>
-    </div>
+        </div>
     </form>
 </body>
+
 </html>
