--- a/views/add.ejs
+++ b/views/add.ejs
@@ -42,10 +42,10 @@
             <div class="form-group row">
                 <label for="boolean" class="col-sm-1 col-form-label">Boolean</label>
                 <div class="col-sm-10">
-                    <select name="boolean" id="boolean" class="form-control">
+                    <select name="booleandata" id="boolean" class="form-control">
                         <option selected disabled> choose the boolean</option>
-                        <option name="booleandata" class="form-control" value="true">True</option>
-                        <option name="booleandata" class="form-control" value="false">False</option>
+                        <option  class="form-control" value="true">True</option>
+                        <option  class="form-control" value="false">False</option>
                     </select>
                 </div>
             </div>
